fix player z-index

--- a/src/app/styl/views/player.styl
+++ b/src/app/styl/views/player.styl
@@ -9,7 +9,7 @@
     top 0
 
 .player
-    z-index: 7
+    z-index: 5
     font-family 'Roboto', sans-serif
     position absolute
     height 100vh
